<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    android:orientation="vertical"
    tools:context=".AddNewContact">

    <ImageView
        android:id="@+id/imgAddContact"
        android:layout_width="match_parent"
        android:layout_height="182dp"
        android:layout_marginTop="20dp"
        android:maxHeight="230dp"
        app:srcCompat="@drawable/pic10" />

    <TextView
        android:id="@+id/tvAddContactName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/contact_detail"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/addName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/bg_editext"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/addEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/bg_editext"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/addPhoneNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/bg_editext"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/addAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/bg_editext"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/address"
        android:inputType="textPostalAddress"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/btnAddContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white"
        android:gravity="center"
        android:paddingTop="10dp"
        android:text="Save"
        android:textColor="@color/colorPrimaryDark"
        app:backgroundTint="@color/white"
        tools:targetApi="lollipop" />


</LinearLayout>