<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_bg"
        android:orientation="vertical"
        tools:context=".EditExistingContacts">


        <ImageView
            android:id="@+id/imgCContact"
            android:layout_width="401dp"
            android:layout_height="184dp"
            android:layout_margin="15dp"
            app:srcCompat="@drawable/pic10" />

        <TextView
            android:id="@+id/tvCContactName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-black"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_editext"
            android:fontFamily="sans-serif-medium"
            android:padding="15dp"
            android:text="@string/email"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/phoneNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/bg_editext"
            android:fontFamily="sans-serif-medium"
            android:padding="15dp"
            android:text="@string/phone_number"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/bg_editext"
            android:fontFamily="sans-serif-medium"
            android:padding="15dp"
            android:text="@string/address"
            android:textColor="@color/white" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton

        android:id="@+id/fabBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start|left"
        android:layout_margin="16dp"
        android:background="@drawable/bg_add_btn"
        android:scaleType="center"
        android:src="@drawable/ic_arrow_back"
        android:tint="@color/Color_Dark"
        app:backgroundTint="@color/white"
        app:borderWidth="0dp"
        app:fabSize="normal"
        app:rippleColor="@color/Color_Dark"
        tools:ignore="VectorDrawableCompat" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton

        android:id="@+id/fabEditContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right|end"
        android:layout_margin="16dp"
        android:background="@drawable/bg_add_btn"
        android:scaleType="center"
        android:src="@drawable/ic_baseline_edit_24"

        android:tint="@color/Color_Dark"
        app:backgroundTint="@color/white"

        app:borderWidth="0dp"
        app:fabSize="normal"
        app:rippleColor="@color/Color_Dark" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>